--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGO_URI="mongodb+srv://23p61a66g0:nC8DnHZQBw2nogwO@sign-up.81wo0jw.mongodb.net/?retryWrites=true&w=majority&appName=sign-up"
+MONGO_URI="mongodb+srv://<username>:<password>@sign-up.81wo0jw.mongodb.net/?retryWrites=true&w=majority&appName=sign-up"
 PORT=3001
